package Memento;

public class WeaponType {
    public final String SNIPER_RIFLE = "Sniper Rifle";
    public final String ASSAULT_RIFLE = "Assault Rifle";
    public final String SUBMACHINEGUN = "Submachine Gun";
    public final String SHOTGUN = "Shotgun";
    public final String KNIFE = "Knife";
}
