@startuml
skinparam classAttributeIconSize 0

class CharacterInfo {
- name : String
- expLevel : String
- location : String

+ displayCharacterInfo(weapon : Weapon)
}

class SavingCharacter {
- nameCopy : String
- expLevelCopy : String
- locationCopy : String
- weaponNameCopy : String
- weaponTypeCopy : WeaponType

+ save(characterInfo : CharacterInfo, weapon : Weapon)
+ restoreToPreviousSave(characterInfo : CharacterInfo, weapon : Weapon)
}

class Weapon {
- weaponName : String
- weaponType : WeaponType
}

Weapon --|> WeaponType : uses
Weapon <|-- CharacterInfo : uses
Weapon <|-- SavingCharacter : uses
WeaponType <|-- SavingCharacter : uses
CharacterInfo <|-- SavingCharacter : uses

enum WeaponType {
ASSAULT_RIFLE
SUBMACHINE_GUN
SNIPER_RIFLE
SHOTGUN
KNIFE
}

@enduml